[gd_scene load_steps=3 format=3 uid="uid://0y2ywy1wwtfd"]

[ext_resource type="Script" uid="uid://vt7olydk8jm8" path="res://resources/test/module_editor_ui.gd" id="1_editor"]
[ext_resource type="PackedScene" uid="uid://lxd4gdjehao6" path="res://resources/test/base_module.tscn" id="2_module"]

[node name="ModuleEditorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_editor")
root_module_scene = ExtResource("2_module")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 666

[node name="PreviewArea" type="Control" parent="HSplitContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer/PreviewArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/PreviewArea/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(666, 1064)
render_target_update_mode = 4

[node name="PreviewScene" type="Node2D" parent="HSplitContainer/PreviewArea/SubViewportContainer/SubViewport"]

[node name="ModuleListContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModuleList" type="VBoxContainer" parent="HSplitContainer/ModuleListContainer"]
layout_mode = 2
size_flags_horizontal = 3
